[package]
name = "cargo-go"
version = "0.4.4"
license = "Apache-2.0/MIT"
authors = [
  "Christopher Serr <cryze92@gmail.com>",
  "Ivan Ukhov <ivan.ukhov@gmail.com>",
  "pravic <ehysta@gmail.com>",
]
description = """
A Cargo subcommand to ease navigation to the crates.io, documentation, home, and
repository pages of a package."""
homepage = "https://github.com/IvanUkhov/cargo-go"
repository = "https://github.com/IvanUkhov/cargo-go"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cargo"]
edition = "2021"

[dependencies]
curl = "0.4"
regex = { default-features = false, version = "0.2" }
hyper-rustls = { version = "0.23.0", features = ["http2"] }
anyhow = "1.0.56"
serde_json = "1.0.79"
subprocess = "0.2.8"

[dependencies.serde]
version = "1.0.136"
default-features = false
features = ["serde_derive"]


[dependencies.clap]
version = "3.1.8"
features = ["unicode", "derive", "wrap_help", "cargo"]

[dependencies.hyper]
version = "0.14.18"
features = ["client", "http1", "http2", "stream", "runtime"]

[target.'cfg(windows)'.dependencies]
registry = "1.2.1"