[package]
name = "cargo-go"
version = "0.4.4"
license = "Apache-2.0/MIT"
authors = [
  "Christopher Serr <cryze92@gmail.com>",
  "Ivan Ukhov <ivan.ukhov@gmail.com>",
  "pravic <ehysta@gmail.com>",
]
description = """
A Cargo subcommand to ease navigation to the crates.io, documentation, home, and
repository pages of a package."""
homepage = "https://github.com/IvanUkhov/cargo-go"
repository = "https://github.com/IvanUkhov/cargo-go"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cargo"]
edition = "2021"

[dependencies]
anyhow = "1.0.56"
serde_json = "1.0.79"
webbrowser = "0.6.0"
log = "0.4.16"
pretty_env_logger = "0.4.0"
serde_path_to_error = "0.1.7"
human-panic = "1.0.3"
clap-verbosity-flag = "1.0.0"
clap_complete = "3.1.4"
clap_complete_fig = "3.1.5"
clap_complete_command = "0.3.3"

[dependencies.paris]
version = "1.5.11"
features = ["macros"]


[dependencies.reqwest]
version = "0.11.10"
features = ["rustls-tls", "blocking", "json"]

[dependencies.serde]
version = "1.0.136"
default-features = false
features = ["serde_derive"]


[dependencies.clap]
version = "3.1.8"
features = ["unicode", "derive", "wrap_help", "cargo"]

